@@ -5,6 +5,9 @@ unsigned char add_to(unsigned char initial, int value, bool carry = false);
 unsigned char sub_to(unsigned char initial, int value, bool carry = false);
 unsigned char get_io(t_addr addr);
 void store_io(t_addr addr, unsigned char value);
+unsigned char get_SP();
+unsigned char get_flags();
+void set_flags(unsigned char flags);
 
 enum flag {
   flag_z,
