@@ -32,11 +32,11 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA
 
 
 const int io_size = 64;
-struct t_regs
+union t_regs
 {
   u8_t a;
 
-  u8_t regs[io_size];
+  t_mem _a;
 };
 
 #define BIT_Z	0x01  // zero status, 1=zero, 0=nonzero
